# cpp-oop

./: README.md  Wezel.h  artykul.cpp  artykul.h  internetowy.cpp  internetowy.h  main.cpp  przedsiebiorstwo.cpp  przedsiebiorstwo.h  restauracja.h  sprzedawca.cpp
src/: CMakeLists.txt  Lista.h  restauracja.cpp  sklep.cpp  sklep.h  sprzedawca.h
